# SeetaFace2AndroidDemo

./: README.md  build.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/chihun/learn/seetafacedemo/: FaceDetectorActivity.java  FaceRecognizerActivity.java
app/src/main/java/com/chihun/learn/seetafacedemo/seeta/: FaceDetector.java  FaceRecognizer.java
gradle/wrapper/: gradle-wrapper.properties
